set(matrix_SVD_srcs 
				"src/xaxpy_2x2.cpp"
				"src/xaxpy_3x3.cpp"
				"src/xaxpy_4x4.cpp"
				"src/xaxpy_5x5.cpp"
				"src/xaxpy_6x6.cpp"
				"src/xdotc_2x2.cpp"
				"src/xdotc_3x3.cpp"
				"src/xdotc_4x4.cpp"
				"src/xdotc_5x5.cpp"
				"src/xdotc_6x6.cpp"
				"src/xnrm2_2x2.cpp"
				"src/xnrm2_3x3.cpp"
				"src/xnrm2_4x4.cpp"
				"src/xnrm2_5x5.cpp"
				"src/xnrm2_6x6.cpp"
				"src/xrot_2x2.cpp"
				"src/xrot_3x3.cpp"
				"src/xrot_4x4.cpp"
				"src/xrot_5x5.cpp"
				"src/xrot_6x6.cpp"
				"src/xrotg_2x2.cpp"
				"src/xrotg_3x3.cpp"
				"src/xrotg_4x4.cpp"
				"src/xrotg_5x5.cpp"
				"src/xrotg_6x6.cpp"
				"src/xscal_2x2.cpp"
				"src/xscal_3x3.cpp"
				"src/xscal_4x4.cpp"
				"src/xscal_5x5.cpp"
				"src/xscal_6x6.cpp"
				"src/xswap_2x2.cpp"
				"src/xswap_3x3.cpp"
				"src/xswap_4x4.cpp"
				"src/xswap_5x5.cpp"
				"src/xswap_6x6.cpp"
				"src/svd_2x2.cpp"
				"src/svd_2x2_impl.cpp"
				"src/svd_3x3.cpp"
				"src/svd_3x3_impl.cpp"
				"src/svd_4x4.cpp"
				"src/svd_4x4_impl.cpp"
				"src/svd_5x5.cpp"
				"src/svd_5x5_impl.cpp"
				"src/svd_6x6.cpp"
				"src/svd_6x6_impl.cpp"
				"src/sqrt.cpp")

idf_component_register(SRCS "${matrix_SVD_srcs}"
                       INCLUDE_DIRS "include"
                       REQUIRES Matrix)
